[package]
name = "bnf_rules"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/bea4dev/bnf_rules"
description = "LR(1) parser generator"
license = "MIT"

[workspace]
members = [
    "bnf_rules_parser",
    "bnf_rules_macro"
]

[dependencies]
bnf_rules_parser = { path = "./bnf_rules_parser", version = "0.1.0" }
bnf_rules_macro = { path = "./bnf_rules_macro", version = "0.1.0" }
regex = "^1.7.1"
