[package]
name = "bnf_rules_macro"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/bea4dev/bnf_rules"
description = "LR(1) parser generator"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
bnf_rules_parser = { path = "../bnf_rules_parser", version = "0.1.0" }
