[package]
name = "bnf_rules_parser"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/bea4dev/bnf_rules"
description = "LR(1) parser generator"
license = "MIT"

[dependencies]
syn = "1.0"
quote = "1.0"
regex = "1.7.1"
either = "1.8.1"
litrs = "0.4.0"
derivative = "2.2.0"
proc-macro2 = "1.0"
